# vuzol

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.proxy  Dockerfile.sandbox  Dockerfile.validation  MANIFEST.txt  Makefile  PROJECT_OVERVIEW.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 332f4ecd3093_create_mvp_persistence_foundation.py  7cdc769ba80a_add_telegram_intake_and_control_actions.py  a21b7e4d9c31_add_workflow_runtime_fields.py  a8b1c2d3e4f5_add_subscription_limit_snapshots.py  b2c9e4f81a03_add_project_executor_preferences.py  b74c9d10e321_add_provider_routing_and_budgets.py  c85d1f4a2b90_add_execution_sandbox_lifecycle.py  cf3ae0c222db_add_projection_revisions.py  d1f0a4b8c921_add_project_provisioning.py  e4b7c2d91a60_add_project_naming_requests.py  f6c8a1d42b77_add_topic_task_numbers.py
certification/: agent-runtime-probe.txt
config/: registries.example.toml
config/dev/: init-test-db.sql
deploy/: registries.executor.toml
deploy/mvp/: canary.py  check.py
deploy/proxy/: tinyproxy-base.conf
deploy/seccomp/: README.md  vuzol-sandbox.json
deploy/systemd/: vuzol-applier.service  vuzol-executor.env.example  vuzol-executor.service  vuzol-project-provisioner.env.example  vuzol-project-provisioner.service  vuzol-rootless-docker.service  vuzol-telegram-delivery.service  vuzol-telegram.env.example  vuzol-telegram.service  vuzol-worker.service
deploy/validation/: run_tests.py  verify_dependency_audit.py
docs/: ARCHITECTURE_INVARIANTS.md  CHANGELOG.md  CONFIGURATION.md  CURRENT.md  INTERPRETATION.md  PROVIDERS.md  STORAGE.md  TELEGRAM.md  TESTING.md
docs/decisions/: ADR-0001-postgresql-source-of-truth.md  ADR-0002-telegram-forum-topics.md  ADR-0003-model-based-semantic_interpreter.md  ADR-0004-modular-monolith.md  ADR-0005-custom_narrow_workflow.md  ADR-0006-worktree_and_sandbox.md  ADR-0007-transactional_delivery_and_fenced_leases.md  ADR-0008-untrusted_execution_boundary.md  ADR-0009-explicit-project-provisioning.md
docs/implementation/: 00_MVP_PLAN.md  (+1 more)
tests/: __init__.py
(+286 files in other folders)
