[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "vuzol"
version = "0.1.0"
description = "Personal task execution system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.25,<5",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "python-telegram-bot>=22,<23",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.35,<1",
]

[project.scripts]
vuzol-app = "vuzol.cli.app:main"
vuzol-worker = "vuzol.cli.worker:main"
vuzol-telegram = "vuzol.cli.telegram:main"
vuzol-telegram-delivery = "vuzol.cli.telegram_delivery:main"
vuzol-interpreter = "vuzol.cli.interpreter:main"
vuzol-executor = "vuzol.cli.executor:main"
vuzol-applier = "vuzol.cli.applier:main"
vuzol-experiment = "vuzol.cli.experiment:main"

[dependency-groups]
dev = [
  "detect-secrets>=1.5,<2",
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "types-jsonschema>=4.25,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vuzol"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=vuzol --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
    "postgresql: requires the real PostgreSQL integration database",
    "docker: requires a working Docker daemon (rootless in target setup)",
    "asyncio: tests using asyncio",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S603", "S607"]
"alembic/**" = ["ANN"]

[tool.ruff.format]
exclude = ["tests/fixtures/**"]
